test/fixtures/errors/partial-separator.mustache
<!DOCTYPE html>
<html>
    <head>
        <title>Page with error in partial</title>
    </head>
    <body>
        <h1>Title</h1>
        {{>partials/user|Label=UserLabel Surname='UserSurname'}}
    </body>
</html>
